added storesignature. still buggy, Error handling success response. Value did not match schema
