# controllers/OffchainDbAdapterConfig.js
@@ -1,14 +1,14 @@
 'use strict';
 
-var ConfigOffchainDbAdapter = require('../service/ConfigOffchainDbAdapterService');
 var utils = require('../utils/writer.js');
+var OffchainDbAdapterConfig = require('../service/OffchainDbAdapterConfigService');
 
 module.exports.setOffchainDBAdapterConfig = function setOffchainDBAdapterConfig (req, res, next, body) {
-  ConfigOffchainDbAdapter.setOffchainDBAdapterConfig(body)
+  OffchainDbAdapterConfig.setOffchainDBAdapterConfig(body)
     .then(function (response) {
       utils.writeJson(res, response);
     })
     .catch(function (response) {
-      utils.writeJson(res, response, 500);
+      utils.writeJson(res, response);
     });
 };
